Linking 2 armatures that depends on each other leads to jiggle artefacts #63574

Closed
opened 2019-04-13 15:49:39 +02:00 by lucas veber · 15 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 55), branch: master, commit date: 2019-04-12 07:09, hash: 0ee23d0f5f
Worked: 2.79b

Short description of error
Linking two armatures that depends on each other through constraints, plays fine in the original file, but make jiggles when it's linked into a file as a proxy.

Exact steps for others to reproduce the error

  • Download the attached blend file
  • 2armatures_01.blend
  • It contains two armatures "rig1" and "rig2". "rig2" depends on "rig1" since its two bones copy the local position of the analogous two bones from "rig1" (it may seem a little farfetched in this case, but this technique is often used in rigs with more complex structures, for example when using a control armature and a deforming armature for example).
  • Start up a new scene, Ctrl-Alt-O to select and link the collection contained in the blend file, and make a proxy of it, "rig1" only
  • Move down slowly the bone "BoneStretchTarget" located at the top of the big bone. It will jiggle randomly.

This evaluation issue does not happen when the two other bones are not parented to the stretch bone. The StretchTo constraint seems to be part of the issue then...

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 55), branch: master, commit date: 2019-04-12 07:09, hash: `0ee23d0f5f` Worked: 2.79b **Short description of error** Linking two armatures that depends on each other through constraints, plays fine in the original file, but make jiggles when it's linked into a file as a proxy. **Exact steps for others to reproduce the error** - Download the attached blend file - [2armatures_01.blend](https://archive.blender.org/developer/F6940200/2armatures_01.blend) - It contains two armatures "rig1" and "rig2". "rig2" depends on "rig1" since its two bones copy the local position of the analogous two bones from "rig1" (it may seem a little farfetched in this case, but this technique is often used in rigs with more complex structures, for example when using a control armature and a deforming armature for example). - Start up a new scene, Ctrl-Alt-O to select and link the collection contained in the blend file, and make a proxy of it, "rig1" only - Move down slowly the bone "BoneStretchTarget" located at the top of the big bone. It will jiggle randomly. This evaluation issue does not happen when the two other bones are not parented to the stretch bone. The StretchTo constraint seems to be part of the issue then...
Author

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I'm getting this error when I open your file:

ERROR (bke.anim_sys): blender/source/blender/blenkernel/intern/anim_sys.c:3795 BKE_animsys_eval_driver: invalid driver - pose.bones["BoneStretchTarget"].constraints["Copy Rotation"].influence[0]

If I link the collection and make a proxy of rig1, I can see that the bones in rig2 jumps around a bit when I move the bone along the Z axis (but they won't stay in those postions).

If I remove the driver the error talks about this doesn't seem to happen (or at least it because very hard to trigger). Do you observe the same thing?

I'm getting this error when I open your file: ``` ERROR (bke.anim_sys): blender/source/blender/blenkernel/intern/anim_sys.c:3795 BKE_animsys_eval_driver: invalid driver - pose.bones["BoneStretchTarget"].constraints["Copy Rotation"].influence[0] ``` If I link the collection and make a proxy of rig1, I can see that the bones in rig2 jumps around a bit when I move the bone along the Z axis (but they won't stay in those postions). If I remove the driver the error talks about this doesn't seem to happen (or at least it because very hard to trigger). Do you observe the same thing?
Author

Yes I can confirm it, the driver is causing it. Deleting the driver fix the issue here.
However, if I create a new valid driver, for example a new bone drives the location of Bone1, the jiggles are back (file attached below)
2armatures_02.blend

Yes I can confirm it, the driver is causing it. Deleting the driver fix the issue here. However, if I create a new valid driver, for example a new bone drives the location of Bone1, the jiggles are back (file attached below) [2armatures_02.blend](https://archive.blender.org/developer/F6943960/2armatures_02.blend)

Added subscriber: @angavrilov

Added subscriber: @angavrilov

Such stuff sounds like a dependency problem - are there no messages about cycles in the console?

Such stuff sounds like a dependency problem - are there no messages about cycles in the console?
Author

No messages.
It works without jiggles in Blender 2.79, theoretically it's not a dependency cycles:
rig1[BoneStretch] parent of > rig1[Bone2.001] drives location > rig1[Bone2] drives location by constraint> rig2[Bone2]

Again there's no jiggle in the main file, only happens in the linked file with proxy.

No messages. It works without jiggles in Blender 2.79, theoretically it's not a dependency cycles: rig1[BoneStretch] parent of > rig1[Bone2.001] drives location > rig1[Bone2] drives location by constraint> rig2[Bone2] Again there's no jiggle in the main file, only happens in the linked file with proxy.

@angavrilov nothing is printed about cycles. However, I can't really reproduce with your new file:
recording.mp4

So I'm a bit unsure what is going on.

@angavrilov nothing is printed about cycles. However, I can't really reproduce with your new file: [recording.mp4](https://archive.blender.org/developer/F6944035/recording.mp4) So I'm a bit unsure what is going on.
Author

Try to move it in all directions, it should happen at some point.

Try to move it in all directions, it should happen at some point.
Author
[2019-04-14 18-24-59.flv](https://archive.blender.org/developer/F6944571/2019-04-14_18-24-59.flv)
Alexander Gavrilov was assigned by Sebastian Parborg 2019-04-15 17:04:51 +02:00

@angavrilov It is a bit tricky to reproduce sometimes, but it mesh does jiggle around a bit sometimes. Don't know if this is a linking problem though, so feel free to reassign if you feel that this is not for you.

@angavrilov It is a bit tricky to reproduce sometimes, but it mesh does jiggle around a bit sometimes. Don't know if this is a linking problem though, so feel free to reassign if you feel that this is not for you.

This issue was referenced by 2f2ba04c60

This issue was referenced by 2f2ba04c6053540ea3a4cd6617cd6b4e38d89c93

So, when it's not a cycle, another likely cause of unstable evaluation is a missing dependency, and that is the case here.

(Cycles in fact cause missing dependencies, because they are resolved by randomly killing one link.)

So, when it's not a cycle, another likely cause of unstable evaluation is a missing dependency, and that is the case here. (Cycles in fact cause missing dependencies, because they are resolved by randomly killing one link.)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks for the fix!!

Thanks for the fix!!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63574
No description provided.